--- a/css/theme.css
+++ b/css/theme.css
@@ -31,4 +31,21 @@ size: 100%;
   float: left;
   width: 100%;
   }
+<!--
+.follow {
+  background-color: #0054A6;
+  text-align: right;
+  list-style: none;
+  width: 100%;
+  margin-left: 0%;
+}
 
+.RDS {
+  text-align: left;
+  color: white;
+}
+nav li {
+  display: inline;
+}
+
+-->
