--- a/css/theme.css
+++ b/css/theme.css
@@ -2,6 +2,13 @@ body {
   padding-top: 520px; 
   }
 
+#wrapper {
+  max-width: 940px;
+  margin: 0 auto;
+  padding: 0 5%;
+}
+
+
 #imageGallery {
 list-style: none;
 padding-left: 70px;
@@ -91,3 +98,5 @@ nav li {
   padding-bottom: 15px;
   padding-top: 15px;
 }
+
+
